--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <title>Document</title>
 </head>
 <body>
-    <form action="" method="POST"></form>
+    <script src="main.js"></script>
 </body>
 </html>
