--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
+
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <script src="arr.js"></script>
 </body>
 </html>
