--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     
-<title>Document</title>
+<title>clock</title>
 </head>
 <body>
-
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <script src="arr.js"></script>
+    <div class="watch">
+        <div class="hours">
+            <div class="hours-pin"></div>
+        </div>
+        <div class="mins">
+            <div class="mins-pin"></div>
+        </div>
+        <div class="sec">
+            <div class="sec-pin"></div>
+        </div>
+    </div>
+    
+    <script src="clock.js"></script>
 </body>
 </html>
