--- a/day03/index.html
+++ b/day03/index.html
@@ -5,46 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modal</title>
     <style>
-        body {
-            background: steelblue;
-            height: 10000px;
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        .wrap {
-            width: 100%;
-            height: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 100;
+        .btn-wrap {
+            width: 800px;
+            height: 60px;
+            background: #ddd;
+            display: flex;
         }
-        .overlay {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: rgba(0,0,0,0.5);
-        }
-        .modal-content {
-            width: 500px;
+        .content-wrap {
+            width: 800px;
             height: 500px;
-            background: rebeccapurple;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 10;
+            background: #eee;
+        }
+        .btns {
+            display: block;
+            height: 100%;
+            width: 150px;
+            outline: none;
+            border: none;
+            background: none;
+        }
+
+        .btns.active {
+            background: #333;
+            color: #fff;
+        }
+
+        .content {
+            display: none;
+        }
+
+        .content.active {
+            display: block;
         }
     </style>
 </head>
 <body>
-    <button class="open">모달오픈</button>
-    
-    <div class="wrap">
-        <div class="overlay"></div>
-        <div class="modal-content">
-            <button class="close">모달닫기</button>
-        </div>
+    <div class="btn-wrap">
+        <button class="btns active">HOME</button>
+        <button class="btns">ABOUT</button>
+        <button class="btns">CONTACT</button>
+    </div>
+    <div class="content-wrap">
+        <div class="content active">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, ad! Aperiam aut at eos porro accusamus consequatur eum aliquid doloremque impedit, sapiente quod eligendi veniam. Omnis libero aut excepturi cupiditate! Ipsum, ipsa accusantium sequi neque aperiam blanditiis id. Sequi dicta neque sunt consequuntur labore reprehenderit perferendis enim ut, corrupti, nostrum similique iure odit. Nesciunt nisi deserunt nemo, voluptates tenetur autem harum atque error vitae placeat nulla repudiandae dolorum possimus quos culpa nostrum in iusto illo laboriosam expedita animi repellat similique ad odio? Sapiente modi provident voluptatibus commodi. Rem cum error, alias dignissimos vel aperiam ullam optio voluptatibus itaque ipsam veniam libero repellendus sapiente quo cumque architecto labore consequatur. Asperiores aspernatur, nihil natus repudiandae reprehenderit corporis obcaecati delectus omnis modi eveniet quisquam, fugiat ducimus totam quod in quibusdam fugit? Ipsa itaque saepe nihil impedit consequuntur iusto, quam minus vel voluptatibus. Molestiae tenetur ipsum numquam. Est explicabo nihil quae magni sit aliquam reiciendis quaerat delectus laudantium! Facilis dolore sapiente quod sed maiores dolorem veniam doloremque perferendis odio ipsa exercitationem quos fugiat harum dignissimos repudiandae quis repellendus laborum nisi incidunt, eligendi adipisci. Dignissimos, qui odit vero dolor repellendus perferendis sit quam animi deserunt accusamus nam optio tenetur earum natus omnis a fugiat? Natus?</div>
+        <div class="content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, ad! Aperiam aut at eos porro accusamus consequatur eum aliquid doloremque impedit, sapiente quod eligendi veniam. Omnis libero aut excepturi cupiditate! Ipsum, ipsa accusantium sequi neque aperiam blanditiis id. Sequi dicta neque sunt consequuntur labore reprehenderit perferendis enim ut, corrupti, nostrum similique iure odit. Nesciunt nisi deserunt nemo, voluptates tenetur autem harum atque error vitae placeat nulla repudiandae dolorum possimus quos culpa nostrum in iusto illo laboriosam expedita animi repellat similique ad odio? Sapiente modi provident voluptatibus commodi. Rem cum error, alias dignissimos vel aperiam ullam optio voluptatibus itaque ipsam veniam libero repellendus sapiente quo cumque architecto labore consequatur. Asperiores aspernatur, nihil natus repudiandae reprehenderit corporis obcaecati delectus omnis modi eveniet quisquam, fugiat ducimus totam quod in quibusdam fugit? Ipsa itaque saepe nihil impedit consequuntur iusto, quam minus vel voluptatibus. Molestiae tenetur ipsum numquam. Est explicabo nihil quae magni sit aliquam reiciendis quaerat delectus laudantium! Facilis dolore sapiente quod sed maiores dolorem veniam doloremque perferendis odio ipsa exercitationem quos fugiat harum dignissimos repudiandae quis repellendus laborum nisi incidunt, eligendi adipisci. Dignissimos, qui odit vero dolor repellendus perferendis sit quam animi deserunt accusamus nam optio tenetur earum natus omnis a fugiat? Natus?</div>
+        <div class="content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, ad! Aperiam aut at eos porro accusamus consequatur eum aliquid doloremque impedit, sapiente quod eligendi veniam. Omnis libero aut excepturi cupiditate! Ipsum, ipsa accusantium sequi neque aperiam blanditiis id. Sequi dicta neque sunt consequuntur labore reprehenderit perferendis enim ut, corrupti, nostrum similique iure odit. Nesciunt nisi deserunt nemo, voluptates tenetur autem harum atque error vitae placeat nulla repudiandae dolorum possimus quos culpa nostrum in iusto illo laboriosam expedita animi repellat similique ad odio? Sapiente modi provident voluptatibus commodi. Rem cum error, alias dignissimos vel aperiam ullam optio voluptatibus itaque ipsam veniam libero repellendus sapiente quo cumque architecto labore consequatur. Asperiores aspernatur, nihil natus repudiandae reprehenderit corporis obcaecati delectus omnis modi eveniet quisquam, fugiat ducimus totam quod in quibusdam fugit? Ipsa itaque saepe nihil impedit consequuntur iusto, quam minus vel voluptatibus. Molestiae tenetur ipsum numquam. Est explicabo nihil quae magni sit aliquam reiciendis quaerat delectus laudantium! Facilis dolore sapiente quod sed maiores dolorem veniam doloremque perferendis odio ipsa exercitationem quos fugiat harum dignissimos repudiandae quis repellendus laborum nisi incidunt, eligendi adipisci. Dignissimos, qui odit vero dolor repellendus perferendis sit quam animi deserunt accusamus nam optio tenetur earum natus omnis a fugiat? Natus?</div>
     </div>
     <script src="main.js"></script>
 </body>
