--- a/practice/hamberBtn.html
+++ b/practice/hamberBtn.html
@@ -41,11 +41,10 @@
     <script>
         const wrap = document.querySelector(".wrap");
 
-        function Hambugerbtn(){
+        function HambugerBtn(){
             wrap.classList.toggle("open");
         }
-
-        wrap.addEventListener('click', Hambugerbtn);
+        wrap.addEventListener("click", HambugerBtn);
     </script>
 </body>
 </html>
