--- a/practice/accordion.html
+++ b/practice/accordion.html
@@ -68,6 +68,7 @@
     <script>
         const btn = document.querySelectorAll(".btn");
         const content = document.querySelectorAll(".content");
+        console.log("git test");
 
         const open = (index) => {
             btn.forEach((item, i) => {
