--- a/day08/index.html
+++ b/day08/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto typing</title>
+    <title>Document</title>
 </head>
 <body>
-    <span class="txt-wrap" data-words='["안녕하세요", "저는", "채하은입니다"]'></span>
     <script src="main.js"></script>
 </body>
 </html>
