class auto typing

--- a/day08/index.html
+++ b/day08/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <span class="type-txt" data-words='["테스트", "입니다."]' data-wait="3000"></span>
     <script src="main.js"></script>
 </body>
 </html>
