--- a/day10/index.html
+++ b/day10/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <img class="icon" width="50" height="50" src="http://openweathermap.org/img/wn/10d@2x.png`" alt="">
+    <h2 class="temp"></h2>
+    <p class="min-temp"></p>
+    <p class="max-temp"></p>
+    <span class="description"></span>
+    <h1 class="city"></h1>
     <script src="main.js"></script>
+    
 </body>
 </html>
