--- a/day11/detail.html
+++ b/day11/detail.html
@@ -21,6 +21,7 @@
         <h2 class="title"></h2>
         <p class="overview"></p>
     </div>
+    <a href="index.html">목록</a>
     <script src="detail.js"></script>
 </body>
 </html>
