--- a/day11/detail.html
+++ b/day11/detail.html
@@ -11,8 +11,30 @@
             padding: 0;
         }
         .wrap {
-            width: 100%;
-            height: 100vh;
+            height: 500px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            color: #fff;
+            padding: 50px 100px;
+        }
+
+        a {
+            width: 100px;
+            margin: 50px auto;
+            height: 40px;
+            border: none;
+            border-radius: 50px;
+            background-color: #28bad2;
+            color: #fff;
+            cursor: pointer;
+            transition: 0.5s;
+            display: block;
+            text-align: center;
+            line-height: 40px;
+            text-decoration: none;
+        }
+        a:hover {
+            background-color: #282828;
         }
     </style>
 </head>
