parallax image effect

--- a/day05/index.html
+++ b/day05/index.html
@@ -13,7 +13,7 @@
     </form>
 
     <div class="bmi"></div>
-    <div class="bmi"></div>
+    <div class="message"></div>
 
     <script src="main.js"></script>
 </body>
