--- a/scss/index.html
+++ b/scss/index.html
@@ -16,6 +16,17 @@
     <div class="box"></div>
     <button class="test-btn">ABC2</button>
     <a href="" class="anchor">LINK</a>
+
+    <div class="box3"></div>
+
+    <button class="default-btn"></button>
+    <button class="red-btn"></button>
+
+    <div class="wrap">
+        <div class="item1" id="red"></div>
+        <div class="item2" id="steelblue"></div>
+        <div class="item3" id="slateblue"></div>
+    </div>
 </body>
 </html>
 
