--- a/scss/index.html
+++ b/scss/index.html
@@ -27,6 +27,9 @@
         <div class="item2" id="steelblue"></div>
         <div class="item3" id="slateblue"></div>
     </div>
+
+
+    <div class="exam"></div>
 </body>
 </html>
 
