--- a/painbox/index.html
+++ b/painbox/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <section class="sec01">
+    <section class="sec01 js-fade on">
         <div>
             <img src="//cdn.shopify.com/s/files/1/0086/4865/4895/files/18cropfinaloption2_260326c1-8c09-4ab6-b9b1-b8a1d0114945_960x960_crop_center.jpg?v=1616780963" alt="">
         </div>
@@ -22,7 +22,7 @@
             </div>
         </div>
     </section>
-    <section class="sec02">
+    <section class="sec02 js-fade">
         <div class="inner">
             <div>
                 <img src="//cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0030_93651217-57d7-4f10-8891-86c2dbf637bb_960x960_crop_center.jpeg?v=1592966195" alt="">
@@ -39,7 +39,7 @@
             </div>
         </div>
     </section>
-    <section class="sec03">
+    <section class="sec03 js-fade">
         <div class="inner">
             <div>
                 <span>THE SHOP</span>
@@ -56,7 +56,7 @@
             </div>
         </div>
     </section>
-    <section class="sec04">
+    <section class="sec04 js-fade">
         <div class="inner">
             <div>
                 <img src="//cdn.shopify.com/s/files/1/0086/4865/4895/files/781C2164-4629-4E32-A11D-6CECD6779989_1_201_a_960x960_crop_center.jpg?v=1604946618" alt="">
@@ -73,7 +73,7 @@
             </div>
         </div>
     </section>
-    <section class="sec05">
+    <section class="sec05 js-fade">
         <div class="inner">
             <div>
                 <span>THE SHOP</span>
@@ -112,7 +112,7 @@
             </div>
         </div>
     </section>
-    <section class="sec06">
+    <section class="sec06 js-fade">
         <div class="inner">
             <div>
                 <img src="//cdn.shopify.com/s/files/1/0086/4865/4895/articles/17cropfinal_1440x970_crop_center.jpg?v=1607469889" alt="">
@@ -146,7 +146,7 @@
             </div>
         </div>
     </section>
-    <section class="sec07">
+    <section class="sec07 js-fade">
         <div>
             <span>JOIN OUR CONVERSATION</span>
             <p>Be the first to hear about new launches and<br/>
@@ -156,7 +156,7 @@
             <input type="text" placeholder="Enter your email">
         </div>
     </section>
-    <section class="sec08">
+    <section class="sec08 js-fade">
         <div class="inner">
             <div>
                 <img src="//cdn.shopify.com/s/files/1/0086/4865/4895/files/ezgif.com-optimize_960x960_crop_center.gif?v=1605883038" alt="">
@@ -173,7 +173,7 @@
             </div>
         </div>
     </section>
-    <section class="sec09">
+    <section class="sec09 js-fade">
         <div class="inner">
             <div>
                 <img src="//cdn.shopify.com/s/files/1/0086/4865/4895/files/010_480x480_crop_top.jpg?v=1616772278" alt="">
