--- a/lavelee-carousel/index.html
+++ b/lavelee-carousel/index.html
@@ -41,6 +41,16 @@
                     <p class="en-font">Cup Type Lce cream</p>
                     <a class="main-pro-more" href="">상품더보기+</a>
                 </div>
+                <div class="car-tit-item">
+                    <p>콘류</p>
+                    <p class="en-font">Cup Type Lce cream</p>
+                    <a class="main-pro-more" href="">상품더보기+</a>
+                </div>
+                <div class="car-tit-item">
+                    <p>콘류</p>
+                    <p class="en-font">Cup Type Lce cream</p>
+                    <a class="main-pro-more" href="">상품더보기+</a>
+                </div>
             </div>
             <div class="car-right">
                 <div class="car-des">
@@ -92,13 +102,29 @@
                             즐길 수 있도록 하였다. 
                         </p>
                     </div>
+                    <div class="car-des-item">
+                        <p>라벨리 팥빙수6</p>
+                        <p>기존 팥빙수들이 팥+얼음알갱이 즉, 팥빙수로만 구성했다면 라벨리 팥빙수는 
+                            상단에 유지방함유량이 높은 아이스크림을 토핑하고 하단은 물성을 조정하여 
+                            뚜껑을 열자마자 바로 떠먹을 수 있는 팥빙수로 부드럽고 진한 팥빙수을 
+                            즐길 수 있도록 하였다. 
+                        </p>
+                    </div>
+                    <div class="car-des-item">
+                        <p>라벨리 팥빙수6</p>
+                        <p>기존 팥빙수들이 팥+얼음알갱이 즉, 팥빙수로만 구성했다면 라벨리 팥빙수는 
+                            상단에 유지방함유량이 높은 아이스크림을 토핑하고 하단은 물성을 조정하여 
+                            뚜껑을 열자마자 바로 떠먹을 수 있는 팥빙수로 부드럽고 진한 팥빙수을 
+                            즐길 수 있도록 하였다. 
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="pro-carousel">
             <div class="wrap">
                 <div class="pro-car-item" id="last-item">
-                    <img src="img//ice-item03.png" alt="">
+                    <img src="img//30-1.png" alt="">
                     <div class="txt-box">
                         <p class="en-font">Cone Type Ice cream</p>
                         <p class="txt-in-des">기존 팥빙수들이 팥+얼음알갱이 즉, 
@@ -109,7 +135,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="pro-car-item">
+                <div class="pro-car-item active">
                     <img src="img//ice-item01.png" alt="">
                     <div class="txt-box">
                         <p class="en-font">Stick Type Ice cream</p>
@@ -121,7 +147,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="pro-car-item active">
+                <div class="pro-car-item">
                     <img src="img//ice-item02.png" alt="">
                     <div class="txt-box">
                         <p class="en-font">Cup Type Ice cream</p>
@@ -146,7 +172,7 @@
                     </div>
                 </div>
                 <div class="pro-car-item">
-                    <img src="img//ice-item01.png" alt="">
+                    <img src="img//01.png" alt="">
                     <div class="txt-box">
                         <p class="en-font">Cone Type Ice cream</p>
                                                 <p class="txt-in-des">기존 팥빙수들이 팥+얼음알갱이 즉, 
@@ -158,7 +184,7 @@
                     </div>
                 </div>
                 <div class="pro-car-item">
-                    <img src="img//ice-item02.png" alt="">
+                    <img src="img//15.png" alt="">
                     <div class="txt-box">
                         <p class="en-font">Cone Type Ice cream</p>
                                                 <p class="txt-in-des">기존 팥빙수들이 팥+얼음알갱이 즉, 
@@ -170,7 +196,7 @@
                     </div>
                 </div>
                 <div class="pro-car-item">
-                    <img src="img//ice-item03.png" alt="">
+                    <img src="img//30-1.png" alt="">
                     <div class="txt-box">
                         <p class="en-font">Cone Type Ice cream</p>
                                                 <p class="txt-in-des">기존 팥빙수들이 팥+얼음알갱이 즉, 
